# utm-dev

./: .gitignore  CLAUDE.md  LICENSE  README.md  TEST-RESULTS.md  TODO.md  go.mod  go.sum  integration_test.go  main.go  mise.toml  package.json  tsconfig.json
.github/workflows/: build.yml  demo-release.yml  pages.yml  release.yml
.mise/tasks/: _bootstrap.ts  _bootstrapLinux.ts  _lib.ts  _screenshot.ts  _utm.ts  _winrm.ts  doctor  doctor.ts  init  init.ts  mcp.ts  screenshot.ts  setup  setup.ts
.src/: Taskfile.yml
cmd/: android.go  build.go  bundle.go  cleanup.go  config.go  create_example.go  docs.go  generate-test-icon.go  generate.go  gio.go  gitignore.go  icon.go  icons.go  install.go  ios.go  list.go  package.go  root.go  run.go  runandcapture.go  screenshot_enabled.go  self.go  self_test.go  setup.go  tauri.go  utm.go  workspace.go
docs/: IMPROVEMENTS.md  PACKAGING.md  README.md  Taskfile.hugo.yml  WEBVIEW-ANALYSIS.md  cicd.md  hugo.toml  index.md  platforms.md  quickstart.md
docs/adr/: 001-utm-caching-alignment.md  002-llm-ready-documentation.md  003-mcp-server-integration.md  004-bubbletea-tui-integration.md  005-openapi-spec-export.md  006-api-first-cli-architecture.md  007-utm-windows-arm-support.md  README.md
docs/agents/: README.md  gio-plugins.md  packer-plugin-utm.md  robotgo.md
docs/cli/: utm-dev.md  utm-dev_android.md  (+84 more)
examples/: README.md
examples/tauri-basic/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-basic/src-tauri/capabilities/: default.json  desktop.json  mobile.json
examples/tauri-basic/src-tauri/src/: lib.rs  main.rs
(+110 files in other folders)
