[package]
name = "tauri-basic"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_basic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-webdriver = { version = "0.2", optional = true }
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
default = []
webdriver = ["tauri-plugin-webdriver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
